--- a/src/index.html
+++ b/src/index.html
@@ -499,7 +499,7 @@
 
 							<div class="gif-registration-slider">
 								<a
-									href="https://www.querodecasamento.com.br/lista-de-casamento/helena-gustavo/"
+									href="/magalu"
 									target="_blank"
 									data-toggle="tooltip"
 									title="Clique para ir para lista da Magalu"
@@ -512,7 +512,7 @@
 										/>
 									</div>
 								</a>
-								<a href="https://lista.camicado.com.br/helegus"
+								<a href="/camicado"
 									 data-toggle="tooltip"
 									 target="_blank"
 									 title="Clique para ir para lista da Camicado">
