add event track

--- a/src/index.html
+++ b/src/index.html
@@ -499,10 +499,11 @@
 
 							<div class="gif-registration-slider">
 								<a
-									href="/magalu"
+									href="https://www.querodecasamento.com.br/lista-de-casamento/helena-gustavo/"
 									target="_blank"
 									data-toggle="tooltip"
 									title="Clique para ir para lista da Magalu"
+									data-gift-list-name="magalu"
 								>
 									<div class="register">
 										<img
@@ -512,10 +513,11 @@
 										/>
 									</div>
 								</a>
-								<a href="/camicado"
+								<a href="https://lista.camicado.com.br/helegus"
 									 data-toggle="tooltip"
 									 target="_blank"
-									 title="Clique para ir para lista da Camicado">
+									 title="Clique para ir para lista da Camicado"
+									 data-gift-list-name="camicado">
 									<div class="register">
 										<img
 											src="images/gift/img-2.png"
