add tags for rsvp

--- a/src/index.html
+++ b/src/index.html
@@ -507,6 +507,7 @@
 										type="text"
 										name="name"
 										class="form-control confirm-presence-input"
+										placeholder="Digite seu nome completo"
 									/>
 								</div>
 								<div class="col col-sm-3 col-xs-12 search-btn">
