--- a/src/index.html
+++ b/src/index.html
@@ -176,12 +176,13 @@
 									<div class="details-inner">
 										<h3>A Noiva</h3>
 										<p>
-											Olá, estou feliz de ter você aqui!
-											Sou filha do Deus vivo, enfermeira e tocantinense.
-											Como você pode ver pelas fotos eu sou muito fã da natureza.
-											Particurlamente amo flores <em>- principalmente orquídeas -</em>
-											e tudo o que é ligado a elas.
-											<strong>Me casar sempre foi meu sonho, e que estou prestes a realizar com meu amor; nada poderia me deixar mais feliz!</strong>
+											Olá, seja bem vindo (a)! Estou muito feliz em ter vocês participando desse momento tão especial na minha vida.
+											Gostaria de antes de tudo falar um pouco mais sobre mim. Sou tocantinense e amo a minha terra.
+											Sou apaixonada pela natureza e pelas flores, principalmente as orquídeas e suas variações.<br />
+											Tenho minha fé firmada  em Cristo Jesus, e meu chamado é cuidar das pessoas, motivo pelo qual me tornei enfermeira.
+											<strong>Casar e formar a minha família sempre foi meu sonho, e eu estou aqui,
+											com vocês, prestes a realizar esse sonho com o amor da minha vida;
+												nada poderia me deixar mais feliz do que compartilhar esse sonho com vocês!</strong>
 										</p>
 										<span class="signature">Helena</span>
 									</div>
@@ -193,13 +194,14 @@
 										<h3>O Noivo</h3>
 										<p>
 											Seja muito bem vindo! Também estou extremamente feliz de ter você
-											aqui. Fazendo um breve resumo: eu sou cristão, engenheiro
-											de software e formado em Jogos Digitais. Gosto muito de
-											música e passar tempo com as pessoas que amo,
-											principalmente com minha futura esposa.
+											aqui.<br />Fazendo um breve resumo: eu sou cristão, engenheiro
+											de software e formado em Jogos Digitais, um verdadeiro nerd.<br />
+											Sou uma pessoa extremamente curiosa e estou sempre em busca de inventar algo.
+											Gosto muito de música e passar tempo com as pessoas que amo,
+											principalmente com minha futura esposa.<br />
 											<strong
 											>Eu sou o homem mais feliz do mundo, porque estou
-												prestes a realizar meu maior sonho com o amor da minha
+												prestes a realizar meu maior sonho, que é me casar com o amor da minha
 												vida.</strong
 											>
 										</p>
