--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,11 @@
 								<li><a href="#couple" class="menu-item">Casal</a></li>
 								<li><a href="#story" class="menu-item">História</a></li>
 								<li>
-									<a href="#gifts" class="menu-item">Listas de Presentes</a>
+									<a href="https://www.querodecasamento.com.br/lista-de-casamento/helena-gustavo/"
+										 target="_blank"
+										 class="menu-item">
+										Lista de Presentes
+									</a>
 								</li>
 								<li>
 									<a href="#rsvp" class="menu-item">Confirmar Presença</a>
@@ -395,71 +399,6 @@
 				<!-- end container -->
 			</section>
 			<!-- end cta -->
-
-			<!-- start gift-registration-section -->
-			<section class="gift-registration-section section-padding" id="gifts">
-				<div class="container">
-					<div class="row">
-						<div class="col col-xs-12">
-							<div class="section-title">
-								<div class="vertical-line">
-									<span><i class="fi flaticon-two"></i></span>
-								</div>
-								<h2>Listas de Presentes</h2>
-							</div>
-						</div>
-					</div>
-					<!-- end section-title -->
-
-					<div class="row content">
-						<div class="col col-lg-10 col-lg-offset-1">
-							<p>
-								Aqui logo abaixo estão os links para as listas de presentes. Nós
-								escolhemos as lojas Magazine Luíza e Camicado.<br />
-								Ambas possuem modo de compras on-line e toda a segurança que
-								você precisa. Para acessar a lista basta clicar em cima do no
-								nome dela.
-							</p>
-
-							<div class="gif-registration-slider">
-								<a
-									href="https://www.querodecasamento.com.br/lista-de-casamento/helena-gustavo/"
-									target="_blank"
-									data-toggle="tooltip"
-									title="Clique para ir para lista da Magalu"
-									data-gift-list-name="magalu"
-								>
-									<div class="register">
-										<img
-											src="images/gift/img-1.png"
-											alt="Magazine Luíza"
-											class="img img-responsive"
-										/>
-									</div>
-								</a>
-								<a
-									href="https://lista.camicado.com.br/helegus"
-									data-toggle="tooltip"
-									target="_blank"
-									title="Clique para ir para lista da Camicado"
-									data-gift-list-name="camicado"
-								>
-									<div class="register">
-										<img
-											src="images/gift/img-2.png"
-											alt="Camicado"
-											class="img img-responsive"
-										/>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<!-- end row -->
-				</div>
-				<!-- end container -->
-			</section>
-			<!-- end gift-registration-section -->
 
 			<!-- start rsvp-section -->
 			<section
